# fiberpool

./: .gitignore  CMakeLists.txt  README.md
cmake/: internal_util.cmake  library_regular_naming.cmake
example/: 01_simple.cpp  02_unittest.cpp  CMakeLists.txt
include/: _config.hpp  fiber_pool.hpp
src/: fiber_pool.cpp  shared_work.cpp  shared_work.hpp
